Add of MPI & Value Iteration

--- a/rl.ipynb
+++ b/rl.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "500600e2",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "ce9446d0",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        " 4: {0: [(0, 3, 0, False)], 1: [(0, 4, 10, True)]}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "2e161227",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "872a75d9",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "898b3685",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "e6261c12",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "       [1., 0.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "ea22ffb7",
    "metadata": {},
    "outputs": [
@@ -405,6 +405,233 @@
     "print(V_star, pi_star, n)\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08b01d2c",
+   "metadata": {},
+   "source": [
+    "# 4. Modified Policy Iteration\n",
+    "\n",
+    "Implémentation de la *Modified Policy Iteration* dans le Row GridWorld \n",
+    "\n",
+    "On ne boucle que $k$ fois dans la phase de *Policy Evaluation* avant de passer à la phase de *Policy Improvement*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "664a200d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.        ],\n",
+       "       [-71.62197274],\n",
+       "       [-43.68075301],\n",
+       "       [-16.62197274],\n",
+       "       [  0.        ]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def modified_policy_evaluation(env, pi, V, k = 100, gamma=0.99, theta=1e-8):\n",
+    "    \"\"\"\n",
+    "    Évalue une politique pi en calculant V_pi via des mises à jour itératives (Bellman expectation backup).\n",
+    "\n",
+    "    Paramètres\n",
+    "    ----------\n",
+    "    env : environnement (discret)\n",
+    "        Doit exposer env.nS (nb d'états), env.nA (nb d'actions), et la dynamique utilisée\n",
+    "        par compute_q_value_s_a(...).\n",
+    "    pi : array-like, shape (nS, nA)\n",
+    "        Politique stochastique : pi[s][a] = P(a|s).\n",
+    "    V : np.ndarray, shape (nS,)\n",
+    "        Valeur d'état initiale. Modifiée en place et aussi renvoyée.\n",
+    "    gamma : float\n",
+    "        Facteur d'actualisation.\n",
+    "    theta : float\n",
+    "        Seuil de convergence (norme infinie sur la variation de V).\n",
+    "    max_iter : int\n",
+    "        Garde-fou pour éviter une boucle infinie si problème de convergence.\n",
+    "\n",
+    "    Retour\n",
+    "    ------\n",
+    "    V : np.ndarray\n",
+    "        Estimation de V_pi.\n",
+    "    n_iter : int\n",
+    "        Nombre d'itérations effectuées.\n",
+    "    \"\"\"\n",
+    "    V = np.asarray(V, dtype=float)  # assure le type float\n",
+    "    pi = np.asarray(pi, dtype=float)\n",
+    "\n",
+    "    for n_iter in range(1, k + 1):\n",
+    "        delta = 0.0\n",
+    "\n",
+    "        for s in range(env.nS):\n",
+    "            v_old = V[s]\n",
+    "\n",
+    "            v_new = 0.0\n",
+    "            for a in range(env.nA):\n",
+    "                prob_a = pi[s, a]\n",
+    "                q_sa = compute_q_value_s_a(env, V, s, a, gamma)\n",
+    "                v_new += prob_a * q_sa\n",
+    "\n",
+    "            delta = max(delta, abs(v_new - v_old)) \n",
+    "            V[s] = v_new\n",
+    "\n",
+    "        # Critère de convergence\n",
+    "        if delta < theta:\n",
+    "            return V, n_iter\n",
+    "\n",
+    "    # Si on sort ici, on n'a pas convergé dans max_iter itérations\n",
+    "    return V, n_iter\n",
+    "\n",
+    "\n",
+    "v, n_it = modified_policy_evaluation(env, pi, V)\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "efb6d454",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0. ]\n",
+      " [ 8.1]\n",
+      " [ 9. ]\n",
+      " [10. ]\n",
+      " [ 0. ]] [[1. 0.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [1. 0.]] 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def modified_policy_iteration(env, V=None, pi=None, k=100, gamma=0.9, theta=1e-8, max_iter=10_000):\n",
+    "    \"\"\"\n",
+    "    Policy Iteration (itération sur les politiques) :\n",
+    "    1) Policy Evaluation : calcule V^{pi}\n",
+    "    2) Policy Improvement : pi <- greedy(V^{pi})\n",
+    "    Jusqu'à stabilité de la politique.\n",
+    "\n",
+    "    Paramètres\n",
+    "    ----------\n",
+    "    env : env discret \n",
+    "    V : np.ndarray (nS,) ou None\n",
+    "        Valeur initiale. Si None -> vecteur de zéros.\n",
+    "    pi : np.ndarray (nS,nA) ou None\n",
+    "        Politique initiale (stochastique). Si None -> uniforme.\n",
+    "    gamma : float\n",
+    "        Discount.\n",
+    "    theta : float\n",
+    "        Seuil de stabilité de la politique (on compare old_pi vs new_pi).\n",
+    "    max_iter : int\n",
+    "        Nombre max d'itérations de policy iteration.\n",
+    "\n",
+    "    Retour\n",
+    "    ------\n",
+    "    V : np.ndarray (nS,)\n",
+    "    pi : np.ndarray (nS,nA)\n",
+    "    n_outer : int (nombre d'itérations externes)\n",
+    "    \"\"\"\n",
+    "    # Initialisations robustes\n",
+    "    if V is None:\n",
+    "        V = np.zeros(env.nS, dtype=float)\n",
+    "    else:\n",
+    "        V = np.asarray(V, dtype=float)\n",
+    "\n",
+    "    if pi is None:\n",
+    "        pi = np.ones((env.nS, env.nA), dtype=float) / env.nA\n",
+    "    else:\n",
+    "        pi = np.asarray(pi, dtype=float)\n",
+    "\n",
+    "    for n_outer in range(1, max_iter + 1):\n",
+    "        old_pi = pi.copy() \n",
+    "\n",
+    "        # 1) Évaluation de la politique courante\n",
+    "        V, _ = modified_policy_evaluation(env, old_pi, V, k, gamma=gamma, theta=theta)\n",
+    "\n",
+    "        # 2) Amélioration (politique greedy)\n",
+    "        pi = policy_improvement(env, V, gamma=gamma)\n",
+    "\n",
+    "        # 3) Test de stabilité de la politique\n",
+    "        delta = np.max(np.abs(pi - old_pi))\n",
+    "\n",
+    "        if delta < theta:\n",
+    "            return V, pi, n_outer\n",
+    "\n",
+    "    return V, pi, n_outer\n",
+    "\n",
+    "\n",
+    "V_star, pi_star, n = modified_policy_iteration(env, V, pi, k=10)\n",
+    "print(V_star, pi_star, n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0981220",
+   "metadata": {},
+   "source": [
+    "# 5. Value Iteration\n",
+    "\n",
+    "Résolution du Row GridWorld via la Value Iteration | C'est le MPI avec $k=1$\n",
+    "\n",
+    "L'algorithme de *Value Iteration* combine les deux étapes de *Policy Evaluation* et de *Policy Improvement* en une seule étape de mise à jour de la valeur d'état en utilisant l'équation de Bellman optimale:\n",
+    "\n",
+    "$$ V(s) \\leftarrow max_a \\sum_{s'}p(s'|s, a)[r(s, a, s') + \\gamma V(s')], \\forall s$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e553e23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def value_iteration(env, v, pi, gamma, theta, n_max=10000):\n",
+    "\n",
+    "      for n_outer in range(1, n_max + 1):\n",
+    "            delta = 0\n",
+    "             \n",
+    "            for s in range(env.nS):\n",
+    "                  q_s = np.zeros([env.nA, 1])\n",
+    "\n",
+    "                  for a in range(env.nA):\n",
+    "                        q_s[a] = compute_q_value_s_a(env, v, s, a, gamma)\n",
+    "                  \n",
+    "                  newV = np.max(q_s)\n",
+    "                  delta = max(delta, np.abs(newV - V[s]))\n",
+    "                  V[s] = newV\n",
+    "\n",
+    "            if(delta < theta):\n",
+    "                  return V\n",
+    "\n",
+    "\n",
+    "env = GridworldRow()\n",
+    "V = np.zeros([env.nS, 1])\n",
+    "\n",
+    "gamma = 0.99\n",
+    "theta = 0.000001\n",
+    "\n",
+    "v = value_iteration(env, v, pi, gamma, theta)"
    ]
   }
  ],
